Remove memtrace dependency.

--- a/bench/dune
+++ b/bench/dune
@@ -2,4 +2,4 @@
  (name bench)
  (modes exe byte_complete)
  (ocamlopt_flags -O3 -linkall -S)
- (libraries shapeshifter core core_bench memtrace))
+ (libraries shapeshifter core core_bench))
